src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Dental_Practice_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dental Practice Partner</label>
        <referenceTo>Dental_Practice__c</referenceTo>
        <relationshipLabel>Accounts (Dental Practice Partner)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dentist_Name__c</fullName>
        <label>Dentist Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_Patient_Apply_for_Financing__c</fullName>
        <description>Did the patient apply for any financing options</description>
        <label>Did Patient Apply for Financing?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_Patient_apply_before_CT_Scan__c</fullName>
        <description>Did your patient want to apply for financing prior to moving forward w/CT Scan?</description>
        <label>Did Patient apply before CT Scan?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_they_schedule_a_PE__c</fullName>
        <label>Did they schedule a PE?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discuss_Medical_Care_Name_1__c</fullName>
        <label>Discuss Medical Care Name 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discuss_Medical_Care_Name_2__c</fullName>
        <label>Discuss Medical Care Name 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discuss_Medical_Care_Relationship_1__c</fullName>
        <label>Discuss Medical Care Relationship 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discuss_Medical_Care_Relationship_2__c</fullName>
        <label>Discuss Medical Care Relationship 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distance_To_Center_Checked__c</fullName>
        <description>Date / Time Distance to Center checked</description>
        <label>Distance To Center Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Distance_To_Center__c</fullName>
        <description>Calculated distance in miles to the nearest center location.</description>
        <label>Distance To Center</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Doctor1__c</fullName>
        <formula>Center__r.Doctor_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doctor1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoseSpot_Patient_ID__c</fullName>
        <label>DoseSpot Patient ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Lead_Rating__c</fullName>
        <label>Eloqua Lead Rating</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email address of patient</description>
        <inlineHelpText>What is your email address?</inlineHelpText>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <label>Emergency Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees_Quoted__c</fullName>
        <label>Fees Quoted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$3500 to $5600 Single</fullName>
                </value>
                <value>
                    <fullName>$9800 &amp; Up for Bridge</fullName>
                </value>
                <value>
                    <fullName>$20,000 to $30,000 for one arch</fullName>
                </value>
                <value>
                    <fullName>$40,000 to $60,000 for full mouth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fees_Quoted_by_Call_Center__c</fullName>
        <label>Fees Quoted by Call Center</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Quote Given</fullName>
                </value>
                <value>
                    <fullName>$3500 to $5600 Single</fullName>
                </value>
                <value>
                    <fullName>$4900 - $7900 anterior maxillary</fullName>
                </value>
                <value>
                    <fullName>$9800 &amp; Up for Bridge</fullName>
                </value>
                <value>
                    <fullName>$20,00 to $30,000 for one arch</fullName>
                </value>
                <value>
                    <fullName>$40,000 to $60,000 for full mouth</fullName>
                </value>
                <value>
                    <fullName>$5,000 to $30,000 for red prescreens</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Company__c</fullName>
        <label>Finance Company</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MedChoice</fullName>
                </value>
                <value>
                    <fullName>CareCredit</fullName>
                </value>
                <value>
                    <fullName>Citi</fullName>
                </value>
                <value>
                    <fullName>SpringStone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Notes__c</fullName>
        <label>Finance Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financing_Result__c</fullName>
        <label>Financing Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved Less Than 50%</fullName>
                </value>
                <value>
                    <fullName>Approved Greater or Equal to 50%</fullName>
                </value>
                <value>
                    <fullName>Approved Full Amount</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>HCF Not Needed</fullName>
                </value>
                <value>
                    <fullName>Refused to Finance - Due to Credit</fullName>
                </value>
                <value>
                    <fullName>Refused to Finance - Due to Interest Rate</fullName>
                </value>
                <value>
                    <fullName>Refused to Finance - Seeking own Financing</fullName>
                </value>
                <value>
                    <fullName>Refused to Finance - Due to High Payment</fullName>
                </value>
                <value>
                    <fullName>Refused to Finance - Needing Partner Consent</fullName>
                </value>
                <value>
                    <fullName>Insufficient Info to Apply</fullName>
                </value>
                <value>
                    <fullName>Promissory Note</fullName>
                </value>
                <value>
                    <fullName>Not willing to apply for credit in general</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Amount_Financed__c</fullName>
        <label>Full Amount Financed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GP_Phone__c</fullName>
        <description>Phone number of patient&apos;s general practitioner</description>
        <label>GP Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GP_of_Record__c</fullName>
        <description>Name of patient&apos;s general practitioner</description>
        <label>GP of Record</label>
        <length>63</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GYN__c</fullName>
        <formula>if(ISPICKVAL(Pre_Screen__c , &quot;Red&quot;), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GYN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <label>General Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Guest_Name__c</fullName>
        <label>Guest Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_Family_Dentist__c</fullName>
        <label>Have Family Dentist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_is_dental_condition_affecting_you__c</fullName>
        <label>How is dental condition affecting you?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_soon_would_you_like_to_start__c</fullName>
        <label>How soon would you like to start</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_would_treatment_change_your_life__c</fullName>
        <label>How would treatment change your life</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_you_shared_it_with_someone_who__c</fullName>
        <label>If you shared it with someone,  who?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did not share it</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Children</fullName>
                </value>
                <value>
                    <fullName>Grandchildren</fullName>
                </value>
                <value>
                    <fullName>Another relative</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inbound_Call__c</fullName>
        <label>Inbound Call</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dental Inquiry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Rate_to_High__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interest Rate to High</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <label>What interests does consult have?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Tennis</fullName>
                </value>
                <value>
                    <fullName>Dining Out</fullName>
                </value>
                <value>
                    <fullName>Exercise</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Attending Movies</fullName>
                </value>
                <value>
                    <fullName>Reading Books</fullName>
                </value>
                <value>
                    <fullName>Pets</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Traveler__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set via Workflow if the last modifier&apos;s Traveler Until date is &gt;= date that the change takes place.  This is used to identify the record for Center Dashboard reporting.  Traveler Until should be set to the month-end date, if the PEC stops traveling mid-month.</description>
        <inlineHelpText>Was the PEC last modifying this record traveling at the time?</inlineHelpText>
        <label>Is Traveler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Traveling__c</fullName>
        <description>Looks to the &apos;Created by&apos; User record to identify PECs that travel to multiple Center Locations; returns &apos;True&apos; if User:Traveler Until date is later than the current date.  Added by Opfocus, Summer 2009, for Center Dashboard reporting.</description>
        <formula>IF(  LastModifiedBy.Traveler_Until__c &gt; Today(), 
     &quot;True&quot;, 
     &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Is owner of this record traveling, based on their User record?</inlineHelpText>
        <label>Is Traveling</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Spoken__c</fullName>
        <label>Language Spoken</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Dentist_Visit__c</fullName>
        <label>Last Dentist Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Marketing_Source__c</fullName>
        <label>Last Marketing Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadLifeID__c</fullName>
        <label>LeadLifeID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadScore__c</fullName>
        <formula>/*TEXT(Pre_Screen__c)*/

/*if(!ISPICKVAL(Pre_Screen__c, &quot;Green&quot;) &amp;&amp; !ISPICKVAL(Pre_Screen__c, &quot;Yellow&quot;) &amp;&amp; !ISPICKVAL(Pre_Screen__c, &quot;Red&quot;), 
 if( Prospect_IQ_Tier__c == &apos;Tier A&apos;, &apos;Yellow&apos;, 
 if( Prospect_IQ_Tier__c ==&apos;Tier B&apos; || Prospect_IQ_Tier__c ==&apos;Tier C&apos; 
 || Prospect_IQ_Tier__c ==&apos;Tier D&apos; || Prospect_IQ_Tier__c ==&apos;Tier E&apos; 
 || Prospect_IQ_Tier__c ==&apos;Tier F&apos;, &apos;Red&apos;, TEXT(Pre_Screen__c))), 
 TEXT(Pre_Screen__c))*/

/*Modified by cm on 2014-1-8 - Blue only now*/ 
/*if(ISPICKVAL(Pre_Screen__c, &quot;Blue (No Hit)&quot;) &amp;&amp; Prospect_IQ_Tier__c == &apos;Tier A&apos;,&apos;Yellow&apos;, 
 if(ISPICKVAL(Pre_Screen__c, &quot;Blue (No Hit)&quot;) &amp;&amp; (Prospect_IQ_Tier__c ==&apos;Tier B&apos; || Prospect_IQ_Tier__c ==&apos;Tier C&apos; 
 || Prospect_IQ_Tier__c ==&apos;Tier D&apos; || Prospect_IQ_Tier__c ==&apos;Tier E&apos; 
 || Prospect_IQ_Tier__c ==&apos;Tier F&apos;),&apos;Red&apos;,TEXT(Pre_Screen__c)))*/

/*New Rule - 8/8/2014 CM - GOLD referrals added in*/ 
if(NOT(ISBLANK(Referral_Office__c)) ,&apos;Gold&apos;, if(ISPICKVAL(Pre_Screen__c, &quot;Blue (No Hit)&quot;) &amp;&amp; value(Prospect_IQ_Score__c) &gt;= -2.4 &amp;&amp; !isblank(Prospect_IQ_Score__c),&apos;Green&apos;, 
 if(ISPICKVAL(Pre_Screen__c, &quot;Blue (No Hit)&quot;) &amp;&amp; value(Prospect_IQ_Score__c) &gt;= -2.7 &amp;&amp; !isblank(Prospect_IQ_Score__c),&apos;Yellow&apos;, 
 if(ISPICKVAL(Pre_Screen__c, &quot;Blue (No Hit)&quot;) &amp;&amp; value(Prospect_IQ_Score__c) &lt; -2.7 &amp;&amp; !isblank(Prospect_IQ_Score__c),&apos;Red&apos;,TEXT(Pre_Screen__c)))))</formula>
        <label>LeadScore</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <formula>Center__r.Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lending_Club_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://www.lendingclub.com/patientsolutions/check-your-rate?epa=&quot; &amp; TEXT(Preliminary_Treatment_Fee_Quoted__c) &amp; &quot;&amp;pfn=&quot; &amp; FirstName &amp; &quot;&amp;pln=&quot; &amp; LastName &amp; &quot;&amp;addr1=&quot; &amp; BillingStreet &amp; &quot;&amp;zip=&quot; &amp;  LEFT(BillingPostalCode, 5) &amp; &quot;&amp;city=&quot; &amp; BillingCity &amp; &quot;&amp;state=&quot; &amp; BillingState &amp; &quot;&amp;phone=&quot; &amp; 
substitute(substitute(substitute(substitute(substitute(SUBSTITUTE(Phone, &quot;(&quot;, &quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;#&quot;,&quot; &quot;),&quot;=&quot;,&quot; &quot;) 
&amp; &quot;&amp;email=&quot; &amp; PersonEmail 
, &quot;Open Credit Application&quot;,&quot;_blank&quot;)</formula>
        <label>Lending Club Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Concern__c</fullName>
        <label>Main Concern</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Main_Dental_Concern__c</fullName>
        <label>Main Dental Concern</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Photo_ID__c</fullName>
        <label>Main Photo ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Medical_Problem_What__c</fullName>
        <label>Major Medical Problem What</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Medical_Problem__c</fullName>
        <label>Major Medical Problem</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Map_Google__c</fullName>
        <formula>HYPERLINK( 

&quot;https://www.google.com/maps?q=&quot; 

&amp; SUBSTITUTE(BillingStreet, &apos; &apos;, &apos;+&apos;) 
&amp;&quot;,+&quot; 
&amp; SUBSTITUTE(BillingCity, &apos; &apos;, &apos;+&apos;) 
&amp;&quot;,+&quot; 
&amp; SUBSTITUTE(BillingState, &apos; &apos;, &apos;+&apos;) 
, &quot;Google Map&quot; 
)</formula>
        <label>Map Google</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Agent__c</fullName>
        <label>Marketing Agent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Janelle Gladstone</fullName>
                </value>
                <value>
                    <fullName>Mary Helen Turner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Source__c</fullName>
        <label>Marketing Source</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedChoice_Applied_Amount__c</fullName>
        <label>MedChoice Applied Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MedChoice_Approved_Amount__c</fullName>
        <label>MedChoice Approved Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MedChoice_Interest_Rate__c</fullName>
        <label>MedChoice Interest Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MedChoice_Pending_Amount__c</fullName>
        <label>MedChoice Pending Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MedChoice_Pending_Status__c</fullName>
        <label>MedChoice Pending Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting on Docs</fullName>
                </value>
                <value>
                    <fullName>Docs Faxed</fullName>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivation_Appearance__c</fullName>
        <description>Provides further detail when Appearance is selected as the motivational reason.</description>
        <label>Motivation - Appearance</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Motivational_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Increased self-confidence in social situations</fullName>
                </value>
                <value>
                    <fullName>Increased self-confidence in workplace</fullName>
                </value>
                <value>
                    <fullName>Making a positive first impression</fullName>
                </value>
                <value>
                    <fullName>Impressing friends/family</fullName>
                </value>
                <value>
                    <fullName>Being more attractive to members of the opposite sex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motivational_Reason_Other__c</fullName>
        <description>Other reason that motivated the patient to attend the consult</description>
        <label>Motivational Reason Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motivational_Reason__c</fullName>
        <label>Motivational Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Appearance</fullName>
                </value>
                <value>
                    <fullName>Special Occasion Upcoming</fullName>
                </value>
                <value>
                    <fullName>Relationship Issue</fullName>
                </value>
                <value>
                    <fullName>Urging of someone else (Dr., Friend, Etc.)</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Health-Periodontal Disease</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NS_Sync__c</fullName>
        <label>NetSuite Sync</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nearest_Center__c</fullName>
        <description>Evaluates to the nearest center 2013 from the Zip Demographics table.</description>
        <formula>/*Zip_Demographic__r.Nearest_Center_2014__r.Name*/ 
/*Zip_Demographic__r.Nearest_Center_2015__r.Name*/ 
/*Zip_Demographic__r.Nearest_Center_2016__r.Name*/ 
Zip_Demographic__r.Recommended_Center__r.Name</formula>
        <label>Nearest Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Negotiated_Fee_Amount__c</fullName>
        <description>Rollup of Negotiated Fee amount for Active Prosth Exams</description>
        <label>Negotiated Fee Amount</label>
        <summarizedField>Opportunity.Negotiated_Total_Amount__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NetSuite_Id__c</fullName>
        <label>NetSuite Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetSuite Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetSuite_Mapping__c</fullName>
        <label>NetSuite Mapping</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSuite_Pull__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetSuite Pull</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetSuite_Push__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NetSuite Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Net_Revenue_Collected__c</fullName>
        <label>Net Revenue Collected</label>
        <summarizedField>Opportunity.Total_Net_Payments__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Net_Revenue_Collected_minus_gp__c</fullName>
        <label>Net Revenue Collected minus gp</label>
        <summarizedField>Opportunity.Total_Net_Payments_minus_gp__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Cancelled_Prostho_Exams__c</fullName>
        <label>Not Cancelled Prostho Exams</label>
        <summarizedField>Opportunity.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Cancelled Not Rescheduled</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Not_Moving_Forward_with_Financing__c</fullName>
        <label>Not Moving Forward with Financing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment to High</fullName>
                </value>
                <value>
                    <fullName>Interest Rate to High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Not_Starting_Other__c</fullName>
        <label>Not Starting Other</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Financing_Applications__c</fullName>
        <formula>IF(CareCredit_Applied_Amount__c  &gt; 0, 1, 0) +
IF( Chase_Applied_Amount2__c   &gt; 0, 1, 0) +
IF( Citi_Applied_Amount__c   &gt; 0, 1, 0) +
IF( MedChoice_Applied_Amount__c   &gt; 0, 1, 0) +
IF( SpringStone_Applied_Amount__c   &gt; 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Financing Applications</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_B_Marketing_Email__c</fullName>
        <label>O/B Marketing Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>150</length>
        <type>Text</type>
    </fields>
</CustomObject>